--- a/src/lists.css
+++ b/src/lists.css
@@ -40,6 +40,18 @@ button[aui-listitem] img {
     float: right;
 }
 
+button[aui-listitem="icon"] {
+    display: flex;
+}
+
+button[aui-listitem="icon"] > img {
+    flex-grow: 0;
+}
+
+button[aui-listitem="icon"] > div {
+    flex-grow: 1;
+}
+
 aui-cards[aui-mode="grid"] {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
